przed scalcja plikow

--- a/SACID_CAN_logger.cfg
+++ b/SACID_CAN_logger.cfg
@@ -1,4 +1,4 @@
-;CANoe Version |4|12|2|59633 SACID_CAN_logger 
+;CANoe Version |4|12|2|59620 SACID_CAN_logger 
 Version: 12.0.101 Build 101
 32 PRO
 10
@@ -356,7 +356,7 @@ End_Of_Object VOfflineBusStatisticSettings 3
 VNETOptionsStreamer 3 Begin_Of_Object
 3
 0
-<VFileName V8 QL> 0 "..\TestPanel" 
+<VFileName V8 QL> 0 "" 
 1
 
 End_Of_Object VNETOptionsStreamer 3
@@ -565,13 +565,13 @@ End_Of_Object VGlobalVariableSettings 3
 VGeneralLoggingBlockSettings 3 Begin_Of_Object
 2
 2000
-601
+629
 0
 3
 End_Of_Object VGeneralLoggingBlockSettings 3
 0
 0
-1966
+1999
 0
 1
 SecurityManager::VSecurityManager 3 Begin_Of_Object
@@ -653,7 +653,7 @@ VUniqueBox 4 Begin_Of_Object
 VBoxRoot 5 Begin_Of_Object
 1
 3
-0 1 0 1 -1 -1 -1 -1 1280 0 1920 444
+1 1 0 1 -1 -1 -1 -1 1025 70 1665 514
 
 1
 
@@ -661,15 +661,15 @@ MDI_DOCK_INFO_END
 5
 1
 6
-0 1 -1 -1 -1 -1 1280 0 1920 444
+0 1 -1 -1 -1 -1 1025 70 1665 514
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
-1
+0
 1
 0
 0
 1
-1920 888
+1826 888
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 772 32 1272 620
@@ -2671,7 +2671,7 @@ VUniqueBox 20 Begin_Of_Object
 VBoxRoot 21 Begin_Of_Object
 1
 1
-1 2 0 1 -1 -1 -1 -1 0 0 640 444
+1 2 0 1 -1 -1 -8 -31 0 0 1037 483
 Trace
 1
 
@@ -2679,7 +2679,7 @@ MDI_DOCK_INFO_END
 5
 1
 6
-0 1 -1 -1 -1 -1 0 0 640 444
+0 1 -1 -1 -8 -31 0 0 1037 483
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
@@ -2687,7 +2687,7 @@ END_OF_DOCK_INFO
 0
 0
 1
-1920 888
+1037 734
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 0 438 166 635
@@ -2782,7 +2782,7 @@ VUniqueBox 20 Begin_Of_Object
 VBoxRoot 21 Begin_Of_Object
 1
 1
-1 3 0 1 -1 -1 -1 -1 1280 444 1920 888
+1 3 0 1 -1 -1 -1 -1 1079 445 1719 889
 Data
 1
 
@@ -2790,15 +2790,15 @@ MDI_DOCK_INFO_END
 5
 1
 6
-0 1 -1 -1 -1 -1 1280 444 1920 888
+0 1 -1 -1 -1 -1 1079 445 1719 889
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
-1
+0
 3
 0
 0
 1
-1920 888
+1826 888
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 0 0 423 193
@@ -5620,7 +5620,7 @@ VLogCfgData 18 Begin_Of_Object
 0
 3
 0
-601
+629
 1
 1
 0
@@ -6635,7 +6635,7 @@ VLogCfgData 19 Begin_Of_Object
 0
 3
 0
-601
+629
 1
 1
 0
@@ -6933,7 +6933,7 @@ VLogCfgData 21 Begin_Of_Object
 0
 3
 0
-601
+629
 1
 1
 0
@@ -7100,7 +7100,7 @@ VLogCfgData 16 Begin_Of_Object
 0
 3
 1
-601
+629
 1
 1
 0
@@ -7278,7 +7278,7 @@ VUniqueBox 4 Begin_Of_Object
 VBoxRoot 5 Begin_Of_Object
 1
 3
-0 0 0 1 -1 -1 -1 -1 640 0 1280 444
+0 0 0 1 -1 -1 -8 -31 639 483 1037 734
 
 1
 
@@ -7286,7 +7286,7 @@ MDI_DOCK_INFO_END
 5
 1
 6
-0 1 -1 -1 -1 -1 640 0 1280 444
+0 1 -1 -1 -8 -31 639 483 1037 734
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
@@ -7294,7 +7294,7 @@ END_OF_DOCK_INFO
 0
 0
 1
-1920 888
+1037 734
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 0 32 771 620
@@ -7367,7 +7367,7 @@ End_Of_Object VGrMnBox 3
 VDOLocalInfoStruct 3 Begin_Of_Object
 4
 1
-533
+540
 VDAOBus 4 Begin_Of_Object
 1
 1
@@ -9812,7 +9812,7 @@ VDAOGBFunctionBlock 5 Begin_Of_Object
 TABPredecessor:
 137
 TABSuccessor:
-456
+540
 VSimulationNode 6 Begin_Of_Object
 5
 VProgrammedNode 7 Begin_Of_Object
@@ -9917,7 +9917,7 @@ VDAOGBFunctionBlock 5 Begin_Of_Object
 456
 3
 TABPredecessor:
-218
+540
 TABSuccessor:
 2
 VSimulationNode 6 Begin_Of_Object
@@ -10007,11 +10007,11 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-2663475240
+1537961116
 0
 NodeSignalPanelBustypeCount 0
 0
-2663475240
+1537961116
 End_Of_Object VSimulationNode 6
 NULL
 
@@ -10019,7 +10019,7 @@ EndOfComment
 0
 1
 End_Of_Object VDAOGBFunctionBlock 5
-1
+2
 VDAOGBFunctionBlock 5 Begin_Of_Object
 1
 137
@@ -12832,6 +12832,113 @@ EndOfComment
 0
 0
 End_Of_Object VDAOGBFunctionBlock 5
+VDAOGBFunctionBlock 5 Begin_Of_Object
+1
+540
+3
+TABPredecessor:
+218
+TABSuccessor:
+456
+VSimulationNode 6 Begin_Of_Object
+5
+VProgrammedNode 7 Begin_Of_Object
+7
+VConfigurationRoot 8 Begin_Of_Object
+1
+End_Of_Object VConfigurationRoot 8
+<VFileName V8 QL> 1 "..\..\..\..\..\OneDrive - Aptiv\APTIV\EE\MotorLogger\MotorLogger.can" 
+1
+C:\Users\dj6dvj\OneDrive - Aptiv\APTIV\EE\MotorLogger\MotorLogger.cbf
+<< default >>
+
+5
+MotorLogger
+ECU 1
+EOF_TITLE_INFO
+<< default >>
+1
+0
+1
+1
+0
+1
+0
+1 2 2 0 
+SS_BEGIN_COMMON_INFO
+1
+4
+Behavior
+1
+Buses
+1
+Misc
+1
+Timing
+1
+SS_END_COMMON_INFO
+
+EOF_MBSSDATA
+1
+0 1
+0
+EOF_NLDATA
+0
+EOF_ASSEMBLYDATA
+<VFileName V8 QL> 1 "..\..\..\..\..\OneDrive - Aptiv\APTIV\EE\MotorLogger\MotorLogger.cbf" 
+VIPBStackSetting 8 Begin_Of_Object
+6
+2
+0
+0
+1
+0
+1
+8
+0.0.0.0
+End_Of_Serialized_Data 8
+8
+::
+End_Of_Serialized_Data 8
+2
+End_Of_Object VIPBStackSetting 8
+7
+NULL
+End_Of_Serialized_Data 7
+0
+<VFileName V8 QL> 0 "" 
+0
+0
+End_Of_Object VProgrammedNode 7
+0
+0
+Startdelay 0 0 0
+Jitter 0 0 1 0 0 0 0
+0
+EOF_NLDATA
+3
+VSimulinkModelViewerConfiguration 7 Begin_Of_Object
+2
+<VFileName V8 QL> 1 "..\TestPanel\vXII2020_3d3\SACID_Panel_Version_3d3" 
+<VFileName V8 QL> 1 "..\TestPanel\vXII2020_3d3\SACID_Panel_Version_3d3" 
+<VFileName V8 QL> 1 "..\TestPanel\vXII2020_3d3\SACID_Panel_Version_3d3" 
+150
+0
+End_Of_Object VSimulinkModelViewerConfiguration 7
+1
+0
+1115149785
+0
+NodeSignalPanelBustypeCount 0
+0
+1115149785
+End_Of_Object VSimulationNode 6
+NULL
+
+EndOfComment
+0
+1
+End_Of_Object VDAOGBFunctionBlock 5
 TABPredecessor:
 0
 TABSuccessor:
@@ -12859,7 +12966,7 @@ NULL
 End_Of_Object VDOLocalInfoStruct 3
 0.000000
 0 0
-1 0 2 59421 1 365 1 2882400001 -1016 -651 187 594 2882400002  0 0 0 59421 1 447 1 2882400001 -1021 -1021 189 189 2882400002  1 0 0 0 0 0   3 
+1 0 2 59421 1 220 1 2882400001 3552 3772 718 932 2882400002  0 0 0 59421 1 220 1 2882400001 3547 3547 720 720 2882400002  0 0 0 0 0 0   3 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -12871,11 +12978,13 @@ CAN
 1
 1
 1
-1876751064960 1 0 1 0 1 1 0 95 83 2000 1 
+2670269387600 1 0 1 0 1 1 0 0 0 2000 1 
 SS_BEGIN_COMMON_INFO
 1
-2
+3
 Channels
+1
+Databases
 1
 Misc
 1
@@ -12892,11 +13001,13 @@ LIN
 5
 1
 1
-1876751115168 1 0 1 0 1 0 0 450 37 2000 1 
+2670207282096 1 0 1 0 1 0 0 94 37 2000 1 
 SS_BEGIN_COMMON_INFO
 1
-2
+3
 Channels
+1
+Databases
 1
 Misc
 1
@@ -12919,7 +13030,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 4 0 1 -1 -1 -1 -1 0 444 640 888
+1 1 0 1 -1 -1 -8 -31 0 485 638 730
 Write
 1
 
@@ -12927,15 +13038,15 @@ MDI_DOCK_INFO_END
 5
 1
 6
-0 1 -1 -1 -1 -1 0 444 640 888
+0 1 -1 -1 -8 -31 0 485 638 730
 6 0 1027 169 0 0 300 180 300 180 0 61440 1 36756 1904 0 0 0 0 260 0 0 0 1 5 32767 1 59422 1 5 1017 174 4 6 518 1 0 1 0 1 169 0 59422 1 
 END_OF_DOCK_INFO
 1
-4
+1
 0
 0
 1
-1920 888
+1037 734
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 0 402 423 595
@@ -13015,7 +13126,7 @@ End_Of_Object VControlAdapter 4
 WListVer 2
 <VFileName V8 QL> 1 "..\Public\Documents\Vector\CANoe\Public\Documents\Vector\CANwin\8.0.71\CANwin Demos\templates" 
  0 1 1 1 1 0
- True 147 90 0 640 280 280 280
+ True 147 90 0 743 280 280 280
 End_Of_Serialized_Data 3
 End_Of_Object VWriteControlAdapter 3
 
@@ -13023,7 +13134,7 @@ End_Of_Serialized_Data 2
 End_Of_Object VWriteBox 2
 VWinStore 2 Begin_Of_Object
 1
-22 2 3 -32000 -32000 -1 -1 -1850 12 -296 1079
+22 0 1 -1 -1 -1 -1 2647 59 3690 989
 End_Of_Child_List
 End_Of_Object VWinStore 2
 VWinStore 2 Begin_Of_Object
@@ -13181,127 +13292,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 -1 0 1 0 0 0 0 380 174 1523 697
-LoggerPanel
-1
-
-MDI_DOCK_INFO_END
-5
-1
-6
-0 1 -1 -1 -1 -1 0 0 185 161
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
-END_OF_DOCK_INFO
-1
--1
-1
-0 1 -1 -1 -1 -1 0 0 185 161
-1
-1
-0 0
-END_OF_DESKTOP_DATA
-6
-0 0 0 0 0 0 0 0 0 0
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
-END_OF_DOCK_INFO
-0
--1
-1
-0 0 0 0 0 0 0 0 0 0
-0
-0
-0 0
-END_OF_DESKTOP_DATA
-6
-0 0 0 0 0 0 0 0 0 0
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
-END_OF_DOCK_INFO
-0
--1
-1
-0 0 0 0 0 0 0 0 0 0
-0
-0
-0 0
-END_OF_DESKTOP_DATA
-END_OF_DESKTOP_DATA_COLLECTION
-0
-0 1
-1
-6
-0 0 0 0 0 0 0 0 0 0
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
-END_OF_DOCK_INFO
-0
--1
-1
-0 0 0 0 0 0 0 0 0 0
-0
-0
-0 0
-END_OF_DESKTOP_DATA
-6
-0 0 0 0 0 0 0 0 0 0
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
-END_OF_DOCK_INFO
-0
--1
-1
-0 0 0 0 0 0 0 0 0 0
-0
-0
-0 0
-END_OF_DESKTOP_DATA
-6
-0 0 0 0 0 0 0 0 0 0
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
-END_OF_DOCK_INFO
-0
--1
-1
-0 0 0 0 0 0 0 0 0 0
-0
-0
-0 0
-END_OF_DESKTOP_DATA
-END_OF_DESKTOP_DATA_COLLECTION
-0
-END_OF_DESKTOP_MEMBER
-{17AAB618-F046-4698-A5BA-79AA380DE272}
-0
-End_Of_Object VBoxRoot 4
-1 -1 0 0 0 0 0 0 0 0 0 0
-End_Of_Object VUniqueBox 3
-2
-VPanelAdapter 3 Begin_Of_Object
-2
-<VFileName V8 QL> 1 "LoggerFiles\LoggerPanel.xvp" 
-1
-0
-0
-VPanelInfo 4 Begin_Of_Object
-1
-VPanelActiveX 5 Begin_Of_Object
-1
-4294967295
-0
-<VFileName V8 QL> 1 "" 
-0
-End_Of_Object VPanelActiveX 5
-End_Of_Object VPanelInfo 4
-1
-End_Of_Object VPanelAdapter 3
-
-End_Of_Serialized_Data 2
-End_Of_Object VPanelBox 2
-VPanelBox 2 Begin_Of_Object
-2
-VUniqueBox 3 Begin_Of_Object
-1
-VBoxRoot 4 Begin_Of_Object
-1
-3
-1 -1 0 1 0 0 0 0 300 170 1201 684
+1 -1 0 1 -1 -1 -1 -1 1982 56 2735 989
 SACID_Panel
 1
 
@@ -13315,7 +13306,7 @@ END_OF_DOCK_INFO
 1
 -1
 1
-0 1 -1 -1 -1 -1 0 0 1826 1080
+0 1 -1 -1 -1 -1 1982 56 2735 989
 1
 1
 0 0
@@ -13327,7 +13318,7 @@ END_OF_DOCK_INFO
 0
 -1
 1
-0 0 0 0 0 0 0 0 0 0
+0 0 0 0 0 0 960 0 960 0
 0
 0
 0 0
@@ -13339,7 +13330,7 @@ END_OF_DOCK_INFO
 0
 -1
 1
-0 0 0 0 0 0 0 0 0 0
+0 0 0 0 0 0 960 0 960 0
 0
 0
 0 0
@@ -13355,7 +13346,7 @@ END_OF_DOCK_INFO
 0
 -1
 1
-0 0 0 0 0 0 0 0 0 0
+0 0 0 0 0 0 960 0 960 0
 0
 0
 0 0
@@ -13367,7 +13358,7 @@ END_OF_DOCK_INFO
 0
 -1
 1
-0 0 0 0 0 0 0 0 0 0
+0 0 0 0 0 0 960 0 960 0
 0
 0
 0 0
@@ -13379,7 +13370,7 @@ END_OF_DOCK_INFO
 0
 -1
 1
-0 0 0 0 0 0 0 0 0 0
+0 0 0 0 0 0 960 0 960 0
 0
 0
 0 0
@@ -13414,9 +13405,129 @@ End_Of_Object VPanelAdapter 3
 
 End_Of_Serialized_Data 2
 End_Of_Object VPanelBox 2
+VPanelBox 2 Begin_Of_Object
+2
+VUniqueBox 3 Begin_Of_Object
+1
+VBoxRoot 4 Begin_Of_Object
+1
+3
+1 -1 0 2 -32094 -32000 -1 -1 -94 0 91 161
+LoggerPanel
+1
+
+MDI_DOCK_INFO_END
+5
+1
+6
+0 1 -1 -1 -1 -1 0 0 185 161
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+1
+-1
+1
+0 2 -32094 -32000 -1 -1 -94 0 91 161
+1
+1
+0 0
+END_OF_DESKTOP_DATA
+6
+0 0 0 0 0 0 0 0 0 0
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 0 0 0 0 0 960 0 960 0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 0 0 0 0 0 0 0 0 0
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 0 0 0 0 0 960 0 960 0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+END_OF_DESKTOP_DATA_COLLECTION
+0
+0 1
+1
+6
+0 0 0 0 0 0 0 0 0 0
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 0 0 0 0 0 960 0 960 0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 0 0 0 0 0 0 0 0 0
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 0 0 0 0 0 960 0 960 0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 0 0 0 0 0 0 0 0 0
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 0 0 0 0 0 960 0 960 0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+END_OF_DESKTOP_DATA_COLLECTION
+0
+END_OF_DESKTOP_MEMBER
+{17AAB618-F046-4698-A5BA-79AA380DE272}
+0
+End_Of_Object VBoxRoot 4
+1 -1 0 0 0 0 0 0 0 0 0 0
+End_Of_Object VUniqueBox 3
+2
+VPanelAdapter 3 Begin_Of_Object
+2
+<VFileName V8 QL> 1 "LoggerFiles\LoggerPanel.xvp" 
+1
+0
+0
+VPanelInfo 4 Begin_Of_Object
+1
+VPanelActiveX 5 Begin_Of_Object
+1
+4294967295
+0
+<VFileName V8 QL> 1 "" 
+0
+End_Of_Object VPanelActiveX 5
+End_Of_Object VPanelInfo 4
+1
+End_Of_Object VPanelAdapter 3
+
+End_Of_Serialized_Data 2
+End_Of_Object VPanelBox 2
 VPersistentPath 2 Begin_Of_Object
 1
-<VFileName V8 QL> 1 "..\TestPanel\SACID_CAN_logger_ver10.cpd" 
+<VFileName V8 QL> 1 "SACID_CAN_logger.cpd" 
 End_Of_Object VPersistentPath 2
 0
 3
@@ -14019,7 +14130,7 @@ _size
 5
 Int32
 _version
-350
+360
 --TextFormatter: End of Object--
 End_Of_Object VNETStandaloneComponent 2
 LinScopeWindow 0
@@ -14421,7 +14532,7 @@ _size
 1
 Int32
 _version
-343
+349
 --TextFormatter: End of Object--
 TypeRef:8
 9
@@ -14674,7 +14785,7 @@ VLogCfgData 3 Begin_Of_Object
 0
 3
 0
-601
+629
 1
 1
 0
@@ -16196,7 +16307,7 @@ OverallModel
 <LogFileMergeMode>ByMeasurementTime</LogFileMergeMode>
 <RootGroup xmlns="" i:type="RootGroup">
 <OfflineSources xmlns:d4p1="http://schemas.microsoft.com/2003/10/Serialization/Arrays" />
-<Id>d4aafdff-422e-43c2-8dbd-df67ca63c775</Id>
+<Id>2a8bbebb-fbae-40bc-a2e4-42d978e506fe</Id>
 </RootGroup>
 <ChannelMappingSets xmlns:d3p1="http://schemas.microsoft.com/2003/10/Serialization/Arrays" />
 <DefaultChannelMappingSetId i:nil="true" />
