--- a/SACID_CAN_logger.cfg
+++ b/SACID_CAN_logger.cfg
@@ -1,4 +1,4 @@
-;CANoe Version |4|12|2|59620 SACID_CAN_logger 
+;CANoe Version |4|12|2|59637 SACID_CAN_logger 
 Version: 12.0.101 Build 101
 32 PRO
 10
@@ -271,12 +271,18 @@ VCaplOptionsStreamer 3 Begin_Of_Object
 End_Of_Object VCaplOptionsStreamer 3
 VSVConfigurationStreamer 3 Begin_Of_Object
 1
-472
+1978
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <systemvariables version="4">
   <namespace name="" comment="" interface="">
     <namespace name="LoggerNamespace" comment="" interface="">
-      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="svButton" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" startValue="0" minValue="0" minValuePhys="0" maxValue="1" maxValuePhys="1" />
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="svInitButton" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" startValue="0" minValue="0" minValuePhys="0" maxValue="1" maxValuePhys="1" />
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="svPeriod" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" startValue="1000" minValue="100" minValuePhys="100" maxValue="10000" maxValuePhys="10000" />
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="svRegisterSwitch" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" startValue="0" minValue="0" minValuePhys="0" maxValue="1" maxValuePhys="1" />
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="svADCswitch" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" startValue="0" minValue="0" minValuePhys="0" maxValue="1" maxValuePhys="1" />
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="svSingleButton" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" startValue="0" minValue="0" minValuePhys="0" maxValue="1" maxValuePhys="1" />
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="svPeriodicStartButton" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" startValue="0" minValue="0" minValuePhys="0" maxValue="1" maxValuePhys="1" />
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="svPeriodicEndButton" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" startValue="0" minValue="0" minValuePhys="0" maxValue="1" maxValuePhys="1" />
     </namespace>
   </namespace>
 </systemvariables>
@@ -565,7 +571,7 @@ End_Of_Object VGlobalVariableSettings 3
 VGeneralLoggingBlockSettings 3 Begin_Of_Object
 2
 2000
-629
+655
 0
 3
 End_Of_Object VGeneralLoggingBlockSettings 3
@@ -2671,7 +2677,7 @@ VUniqueBox 20 Begin_Of_Object
 VBoxRoot 21 Begin_Of_Object
 1
 1
-1 2 0 1 -1 -1 -8 -31 0 0 1037 483
+1 2 0 1 -1 -1 -1 -1 0 0 1037 525
 Trace
 1
 
@@ -2679,7 +2685,7 @@ MDI_DOCK_INFO_END
 5
 1
 6
-0 1 -1 -1 -8 -31 0 0 1037 483
+0 1 -1 -1 -1 -1 0 0 1037 525
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
@@ -2687,7 +2693,7 @@ END_OF_DOCK_INFO
 0
 0
 1
-1037 734
+1037 798
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 0 438 166 635
@@ -5620,7 +5626,7 @@ VLogCfgData 18 Begin_Of_Object
 0
 3
 0
-629
+655
 1
 1
 0
@@ -6635,7 +6641,7 @@ VLogCfgData 19 Begin_Of_Object
 0
 3
 0
-629
+655
 1
 1
 0
@@ -6933,7 +6939,7 @@ VLogCfgData 21 Begin_Of_Object
 0
 3
 0
-629
+655
 1
 1
 0
@@ -7100,7 +7106,7 @@ VLogCfgData 16 Begin_Of_Object
 0
 3
 1
-629
+655
 1
 1
 0
@@ -7278,7 +7284,7 @@ VUniqueBox 4 Begin_Of_Object
 VBoxRoot 5 Begin_Of_Object
 1
 3
-0 0 0 1 -1 -1 -8 -31 639 483 1037 734
+0 0 0 1 -1 -1 -1 -1 639 525 1037 798
 
 1
 
@@ -7286,7 +7292,7 @@ MDI_DOCK_INFO_END
 5
 1
 6
-0 1 -1 -1 -8 -31 639 483 1037 734
+0 1 -1 -1 -1 -1 639 525 1037 798
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
@@ -7294,7 +7300,7 @@ END_OF_DOCK_INFO
 0
 0
 1
-1037 734
+1037 798
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 0 32 771 620
@@ -7367,7 +7373,7 @@ End_Of_Object VGrMnBox 3
 VDOLocalInfoStruct 3 Begin_Of_Object
 4
 1
-540
+554
 VDAOBus 4 Begin_Of_Object
 1
 1
@@ -10007,11 +10013,11 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-1537961116
+1293766132
 0
 NodeSignalPanelBustypeCount 0
 0
-1537961116
+1293766132
 End_Of_Object VSimulationNode 6
 NULL
 
@@ -12847,9 +12853,9 @@ VProgrammedNode 7 Begin_Of_Object
 VConfigurationRoot 8 Begin_Of_Object
 1
 End_Of_Object VConfigurationRoot 8
-<VFileName V8 QL> 1 "..\..\..\..\..\OneDrive - Aptiv\APTIV\EE\MotorLogger\MotorLogger.can" 
+<VFileName V8 QL> 1 "LoggerFiles\MotorLogger.can" 
 1
-C:\Users\dj6dvj\OneDrive - Aptiv\APTIV\EE\MotorLogger\MotorLogger.cbf
+C:\Users\dj6dvj\APTIV_WORK\1_SACID\2_SOFT\_FromSacidTeam\Logger\LoggerFiles\MotorLogger.cbf
 << default >>
 
 5
@@ -12885,7 +12891,7 @@ EOF_MBSSDATA
 EOF_NLDATA
 0
 EOF_ASSEMBLYDATA
-<VFileName V8 QL> 1 "..\..\..\..\..\OneDrive - Aptiv\APTIV\EE\MotorLogger\MotorLogger.cbf" 
+<VFileName V8 QL> 1 "LoggerFiles\MotorLogger.cbf" 
 VIPBStackSetting 8 Begin_Of_Object
 6
 2
@@ -12927,11 +12933,11 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-1115149785
+2431080484
 0
 NodeSignalPanelBustypeCount 0
 0
-1115149785
+2431080484
 End_Of_Object VSimulationNode 6
 NULL
 
@@ -12966,7 +12972,7 @@ NULL
 End_Of_Object VDOLocalInfoStruct 3
 0.000000
 0 0
-1 0 2 59421 1 220 1 2882400001 3552 3772 718 932 2882400002  0 0 0 59421 1 220 1 2882400001 3547 3547 720 720 2882400002  0 0 0 0 0 0   3 
+1 0 2 59421 1 91 1 2882400001 3681 3772 760 996 2882400002  0 0 0 59421 1 280 1 2882400001 3676 3676 762 762 2882400002  0 0 0 2157672392896 2157672515744 2157670389160   3 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -12978,7 +12984,7 @@ CAN
 1
 1
 1
-2670269387600 1 0 1 0 1 1 0 0 0 2000 1 
+2157676302816 1 0 1 0 1 1 0 416 50 2000 1 
 SS_BEGIN_COMMON_INFO
 1
 3
@@ -13001,7 +13007,7 @@ LIN
 5
 1
 1
-2670207282096 1 0 1 0 1 0 0 94 37 2000 1 
+2157668807888 1 0 1 0 1 0 0 94 37 2000 1 
 SS_BEGIN_COMMON_INFO
 1
 3
@@ -13030,7 +13036,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 1 0 1 -1 -1 -8 -31 0 485 638 730
+1 1 0 1 -1 -1 -1 -1 0 527 638 793
 Write
 1
 
@@ -13038,7 +13044,7 @@ MDI_DOCK_INFO_END
 5
 1
 6
-0 1 -1 -1 -8 -31 0 485 638 730
+0 1 -1 -1 -1 -1 0 527 638 793
 6 0 1027 169 0 0 300 180 300 180 0 61440 1 36756 1904 0 0 0 0 260 0 0 0 1 5 32767 1 59422 1 5 1017 174 4 6 518 1 0 1 0 1 169 0 59422 1 
 END_OF_DOCK_INFO
 1
@@ -13046,7 +13052,7 @@ END_OF_DOCK_INFO
 0
 0
 1
-1037 734
+1037 798
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 0 402 423 595
@@ -13126,7 +13132,7 @@ End_Of_Object VControlAdapter 4
 WListVer 2
 <VFileName V8 QL> 1 "..\Public\Documents\Vector\CANoe\Public\Documents\Vector\CANwin\8.0.71\CANwin Demos\templates" 
  0 1 1 1 1 0
- True 147 90 0 743 280 280 280
+ True 147 90 0 743 280 789 280
 End_Of_Serialized_Data 3
 End_Of_Object VWriteControlAdapter 3
 
@@ -13134,7 +13140,7 @@ End_Of_Serialized_Data 2
 End_Of_Object VWriteBox 2
 VWinStore 2 Begin_Of_Object
 1
-22 0 1 -1 -1 -1 -1 2647 59 3690 989
+22 0 1 -1 -1 -1 -1 2647 59 3690 1053
 End_Of_Child_List
 End_Of_Object VWinStore 2
 VWinStore 2 Begin_Of_Object
@@ -13292,127 +13298,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 -1 0 1 -1 -1 -1 -1 1982 56 2735 989
-SACID_Panel
-1
-
-MDI_DOCK_INFO_END
-5
-1
-6
-0 1 -1 -1 -1 -1 0 0 4825 1293
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
-END_OF_DOCK_INFO
-1
--1
-1
-0 1 -1 -1 -1 -1 1982 56 2735 989
-1
-1
-0 0
-END_OF_DESKTOP_DATA
-6
-0 0 0 0 0 0 0 0 0 0
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
-END_OF_DOCK_INFO
-0
--1
-1
-0 0 0 0 0 0 960 0 960 0
-0
-0
-0 0
-END_OF_DESKTOP_DATA
-6
-0 0 0 0 0 0 0 0 0 0
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
-END_OF_DOCK_INFO
-0
--1
-1
-0 0 0 0 0 0 960 0 960 0
-0
-0
-0 0
-END_OF_DESKTOP_DATA
-END_OF_DESKTOP_DATA_COLLECTION
-0
-0 1
-1
-6
-0 0 0 0 0 0 0 0 0 0
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
-END_OF_DOCK_INFO
-0
--1
-1
-0 0 0 0 0 0 960 0 960 0
-0
-0
-0 0
-END_OF_DESKTOP_DATA
-6
-0 0 0 0 0 0 0 0 0 0
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
-END_OF_DOCK_INFO
-0
--1
-1
-0 0 0 0 0 0 960 0 960 0
-0
-0
-0 0
-END_OF_DESKTOP_DATA
-6
-0 0 0 0 0 0 0 0 0 0
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
-END_OF_DOCK_INFO
-0
--1
-1
-0 0 0 0 0 0 960 0 960 0
-0
-0
-0 0
-END_OF_DESKTOP_DATA
-END_OF_DESKTOP_DATA_COLLECTION
-0
-END_OF_DESKTOP_MEMBER
-{C6740578-9584-44BC-984A-1E34EED66717}
-0
-End_Of_Object VBoxRoot 4
-1 -1 0 0 0 0 0 0 0 0 0 0
-End_Of_Object VUniqueBox 3
-2
-VPanelAdapter 3 Begin_Of_Object
-2
-<VFileName V8 QL> 1 "SACID_Panel_Version_3d3\SACID_Panel_Version_3d3.xvp" 
-1
-0
-1179603807
-VPanelInfo 4 Begin_Of_Object
-1
-VPanelActiveX 5 Begin_Of_Object
-1
-4294967295
-0
-<VFileName V8 QL> 1 "" 
-0
-End_Of_Object VPanelActiveX 5
-End_Of_Object VPanelInfo 4
-1
-End_Of_Object VPanelAdapter 3
-
-End_Of_Serialized_Data 2
-End_Of_Object VPanelBox 2
-VPanelBox 2 Begin_Of_Object
-2
-VUniqueBox 3 Begin_Of_Object
-1
-VBoxRoot 4 Begin_Of_Object
-1
-3
-1 -1 0 2 -32094 -32000 -1 -1 -94 0 91 161
+1 -1 0 1 -32094 -32000 -1 -1 775 0 960 161
 LoggerPanel
 1
 
@@ -13426,7 +13312,7 @@ END_OF_DOCK_INFO
 1
 -1
 1
-0 2 -32094 -32000 -1 -1 -94 0 91 161
+0 1 -1 -1 -1 -1 1982 473 2442 955
 1
 1
 0 0
@@ -13510,6 +13396,126 @@ VPanelAdapter 3 Begin_Of_Object
 1
 0
 0
+VPanelInfo 4 Begin_Of_Object
+1
+VPanelActiveX 5 Begin_Of_Object
+1
+4294967295
+0
+<VFileName V8 QL> 1 "" 
+0
+End_Of_Object VPanelActiveX 5
+End_Of_Object VPanelInfo 4
+1
+End_Of_Object VPanelAdapter 3
+
+End_Of_Serialized_Data 2
+End_Of_Object VPanelBox 2
+VPanelBox 2 Begin_Of_Object
+2
+VUniqueBox 3 Begin_Of_Object
+1
+VBoxRoot 4 Begin_Of_Object
+1
+3
+1 -1 0 1 -1 -1 -1 -1 1982 56 2735 1060
+SACID_Panel
+1
+
+MDI_DOCK_INFO_END
+5
+1
+6
+0 1 -1 -1 -1 -1 0 0 4825 1293
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+1
+-1
+1
+0 1 -1 -1 -1 -1 1982 56 2735 472
+1
+1
+0 0
+END_OF_DESKTOP_DATA
+6
+0 0 0 0 0 0 0 0 0 0
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 0 0 0 0 0 960 0 960 0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 0 0 0 0 0 0 0 0 0
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 0 0 0 0 0 960 0 960 0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+END_OF_DESKTOP_DATA_COLLECTION
+0
+0 1
+1
+6
+0 0 0 0 0 0 0 0 0 0
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 0 0 0 0 0 960 0 960 0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 0 0 0 0 0 0 0 0 0
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 0 0 0 0 0 960 0 960 0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 0 0 0 0 0 0 0 0 0
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 0 0 0 0 0 960 0 960 0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+END_OF_DESKTOP_DATA_COLLECTION
+0
+END_OF_DESKTOP_MEMBER
+{C6740578-9584-44BC-984A-1E34EED66717}
+0
+End_Of_Object VBoxRoot 4
+1 -1 0 0 0 0 0 0 0 0 0 0
+End_Of_Object VUniqueBox 3
+2
+VPanelAdapter 3 Begin_Of_Object
+2
+<VFileName V8 QL> 1 "SACID_Panel_Version_3d3\SACID_Panel_Version_3d3.xvp" 
+1
+0
+1179603807
 VPanelInfo 4 Begin_Of_Object
 1
 VPanelActiveX 5 Begin_Of_Object
@@ -14130,7 +14136,7 @@ _size
 5
 Int32
 _version
-360
+370
 --TextFormatter: End of Object--
 End_Of_Object VNETStandaloneComponent 2
 LinScopeWindow 0
@@ -14532,7 +14538,7 @@ _size
 1
 Int32
 _version
-349
+357
 --TextFormatter: End of Object--
 TypeRef:8
 9
@@ -14785,7 +14791,7 @@ VLogCfgData 3 Begin_Of_Object
 0
 3
 0
-629
+655
 1
 1
 0
@@ -15540,65 +15546,65 @@ End_Of_Object VDocumentViewerWrapper 2
 SVDialogSettings
 VSVDialogSettings 2 Begin_Of_Object
 1
--1425
-251
+2146
+386
 930
 600
 1
-1
+0
 0
 320
-442
+440
 -1
 6
 VColumnSettings 3 Begin_Of_Object
 1
 1
 0
-129
+205
 End_Of_Object VColumnSettings 3
 VColumnSettings 3 Begin_Of_Object
 1
 2
 1
-69
+143
 End_Of_Object VColumnSettings 3
 VColumnSettings 3 Begin_Of_Object
 1
 3
 2
-79
+152
 End_Of_Object VColumnSettings 3
 VColumnSettings 3 Begin_Of_Object
 1
 4
 3
-40
+113
 End_Of_Object VColumnSettings 3
 VColumnSettings 3 Begin_Of_Object
 1
 5
 4
-44
+117
 End_Of_Object VColumnSettings 3
 VColumnSettings 3 Begin_Of_Object
 1
 6
 5
-64
+137
 End_Of_Object VColumnSettings 3
 3
 VColumnSettings 3 Begin_Of_Object
 1
 1
 0
-165
+164
 End_Of_Object VColumnSettings 3
 VColumnSettings 3 Begin_Of_Object
 1
 2
 1
-138
+137
 End_Of_Object VColumnSettings 3
 VColumnSettings 3 Begin_Of_Object
 1
@@ -16307,7 +16313,7 @@ OverallModel
 <LogFileMergeMode>ByMeasurementTime</LogFileMergeMode>
 <RootGroup xmlns="" i:type="RootGroup">
 <OfflineSources xmlns:d4p1="http://schemas.microsoft.com/2003/10/Serialization/Arrays" />
-<Id>2a8bbebb-fbae-40bc-a2e4-42d978e506fe</Id>
+<Id>82930e9e-0005-4c8c-aa25-d28701268a14</Id>
 </RootGroup>
 <ChannelMappingSets xmlns:d3p1="http://schemas.microsoft.com/2003/10/Serialization/Arrays" />
 <DefaultChannelMappingSetId i:nil="true" />
