--- a/SACID_CAN_logger.cfg
+++ b/SACID_CAN_logger.cfg
@@ -1,4 +1,4 @@
-;CANoe Version |4|12|2|59637 SACID_CAN_logger 
+;CANoe Version |4|12|2|59620 SACID_CAN_logger 
 Version: 12.0.101 Build 101
 32 PRO
 10
@@ -16,7 +16,7 @@ VGlobalConfiguration 1 Begin_Of_Object
 17
 VGlobalParameters 2 Begin_Of_Object
 31
-2
+1
 3,100,200,500
 1000000 1.000000 0 1000 1 1 0 0 1 1 1 0 0 0 1 0 0 0
 1
@@ -276,13 +276,13 @@ VSVConfigurationStreamer 3 Begin_Of_Object
 <systemvariables version="4">
   <namespace name="" comment="" interface="">
     <namespace name="LoggerNamespace" comment="" interface="">
-      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="svInitButton" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" startValue="0" minValue="0" minValuePhys="0" maxValue="1" maxValuePhys="1" />
-      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="svPeriod" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" startValue="1000" minValue="100" minValuePhys="100" maxValue="10000" maxValuePhys="10000" />
-      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="svRegisterSwitch" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" startValue="0" minValue="0" minValuePhys="0" maxValue="1" maxValuePhys="1" />
-      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="svADCswitch" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" startValue="0" minValue="0" minValuePhys="0" maxValue="1" maxValuePhys="1" />
-      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="svSingleButton" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" startValue="0" minValue="0" minValuePhys="0" maxValue="1" maxValuePhys="1" />
-      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="svPeriodicStartButton" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" startValue="0" minValue="0" minValuePhys="0" maxValue="1" maxValuePhys="1" />
       <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="svPeriodicEndButton" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" startValue="0" minValue="0" minValuePhys="0" maxValue="1" maxValuePhys="1" />
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="svPeriodicStartButton" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" startValue="0" minValue="0" minValuePhys="0" maxValue="1" maxValuePhys="1" />
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="svSingleButton" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" startValue="0" minValue="0" minValuePhys="0" maxValue="1" maxValuePhys="1" />
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="svADCswitch" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" startValue="0" minValue="0" minValuePhys="0" maxValue="1" maxValuePhys="1" />
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="svRegisterSwitch" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" startValue="0" minValue="0" minValuePhys="0" maxValue="1" maxValuePhys="1" />
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="svPeriod" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" startValue="1000" minValue="100" minValuePhys="100" maxValue="10000" maxValuePhys="10000" />
+      <variable anlyzLocal="2" readOnly="false" valueSequence="false" unit="" name="svInitButton" comment="" bitcount="32" isSigned="true" encoding="65001" type="int" startValue="0" minValue="0" minValuePhys="0" maxValue="1" maxValuePhys="1" />
     </namespace>
   </namespace>
 </systemvariables>
@@ -296,8 +296,8 @@ VOfflineBusStatisticSettings 3 Begin_Of_Object
 1
 1 1
 1 500000
-1 2
-1 500000
+0 2
+1 0
 0 3
 1 0
 0 4
@@ -571,13 +571,13 @@ End_Of_Object VGlobalVariableSettings 3
 VGeneralLoggingBlockSettings 3 Begin_Of_Object
 2
 2000
-655
+689
 0
 3
 End_Of_Object VGeneralLoggingBlockSettings 3
 0
 0
-1999
+2033
 0
 1
 SecurityManager::VSecurityManager 3 Begin_Of_Object
@@ -777,10 +777,9 @@ VChannelFilterData 8 Begin_Of_Object
 1
 VBusChannelData 9 Begin_Of_Object
 1
-2
-2
 1
-2
+1
+1
 1
 1
 End_Of_Object VBusChannelData 9
@@ -2601,6 +2600,41 @@ End_Of_Object VTraceColumnConfiguration 19
 0
 VTraceControlFixedModeExpansionItems 19 Begin_Of_Object
 3
+1
+VConfigMessage 20 Begin_Of_Object
+5
+VConfigBusObject 21 Begin_Of_Object
+1
+VConfigBusEvent 22 Begin_Of_Object
+1
+VConfigEvent 23 Begin_Of_Object
+1
+End_Of_Object VConfigEvent 23
+1
+1
+End_Of_Object VConfigBusEvent 22
+End_Of_Object VConfigBusObject 21
+9
+1
+VDatabaseBusMessageId 21 Begin_Of_Object
+3
+2621833243
+1
+1
+0
+0
+0
+ISOx_SACID_1_Resp_FD_XIX_HCP5_CANFD01
+0
+HCP5_CANFD01
+0
+1
+End_Of_Object VDatabaseBusMessageId 21
+NULL
+0
+0
+0
+End_Of_Object VConfigMessage 20
 0
 End_Of_Object VTraceControlFixedModeExpansionItems 19
 18
@@ -2677,7 +2711,7 @@ VUniqueBox 20 Begin_Of_Object
 VBoxRoot 21 Begin_Of_Object
 1
 1
-1 2 0 1 -1 -1 -1 -1 0 0 1037 525
+1 1 0 1 -1 -1 -1 -1 0 0 1037 525
 Trace
 1
 
@@ -2689,7 +2723,7 @@ MDI_DOCK_INFO_END
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-2
+1
 0
 0
 1
@@ -5626,7 +5660,7 @@ VLogCfgData 18 Begin_Of_Object
 0
 3
 0
-655
+689
 1
 1
 0
@@ -6641,7 +6675,7 @@ VLogCfgData 19 Begin_Of_Object
 0
 3
 0
-655
+689
 1
 1
 0
@@ -6939,7 +6973,7 @@ VLogCfgData 21 Begin_Of_Object
 0
 3
 0
-655
+689
 1
 1
 0
@@ -7106,7 +7140,7 @@ VLogCfgData 16 Begin_Of_Object
 0
 3
 1
-655
+689
 1
 1
 0
@@ -7284,7 +7318,7 @@ VUniqueBox 4 Begin_Of_Object
 VBoxRoot 5 Begin_Of_Object
 1
 3
-0 0 0 1 -1 -1 -1 -1 639 525 1037 798
+0 0 0 1 -1 -1 -1 -1 800 525 1037 798
 
 1
 
@@ -7292,7 +7326,7 @@ MDI_DOCK_INFO_END
 5
 1
 6
-0 1 -1 -1 -1 -1 639 525 1037 798
+0 1 -1 -1 -1 -1 800 525 1037 798
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
@@ -7373,7 +7407,7 @@ End_Of_Object VGrMnBox 3
 VDOLocalInfoStruct 3 Begin_Of_Object
 4
 1
-554
+561
 VDAOBus 4 Begin_Of_Object
 1
 1
@@ -10013,11 +10047,11 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-1293766132
+2903217704
 0
 NodeSignalPanelBustypeCount 0
 0
-1293766132
+2903217704
 End_Of_Object VSimulationNode 6
 NULL
 
@@ -12972,7 +13006,7 @@ NULL
 End_Of_Object VDOLocalInfoStruct 3
 0.000000
 0 0
-1 0 2 59421 1 91 1 2882400001 3681 3772 760 996 2882400002  0 0 0 59421 1 280 1 2882400001 3676 3676 762 762 2882400002  0 0 0 2157672392896 2157672515744 2157670389160   3 
+1 0 2 59421 1 91 1 2882400001 3681 3772 760 996 2882400002  0 0 0 59421 1 280 1 2882400001 3676 3676 762 762 2882400002  0 0 0 2467099254256 2467099375168 2467097915768   3 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -12984,7 +13018,7 @@ CAN
 1
 1
 1
-2157676302816 1 0 1 0 1 1 0 416 50 2000 1 
+2467151745936 1 0 1 0 1 1 0 520 2 2000 1 
 SS_BEGIN_COMMON_INFO
 1
 3
@@ -13007,7 +13041,7 @@ LIN
 5
 1
 1
-2157668807888 1 0 1 0 1 0 0 94 37 2000 1 
+2467096870272 1 0 1 0 1 0 0 94 37 2000 1 
 SS_BEGIN_COMMON_INFO
 1
 3
@@ -13036,7 +13070,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 1 0 1 -1 -1 -1 -1 0 527 638 793
+1 2 0 1 -1 -1 -1 -1 0 527 635 793
 Write
 1
 
@@ -13044,11 +13078,11 @@ MDI_DOCK_INFO_END
 5
 1
 6
-0 1 -1 -1 -1 -1 0 527 638 793
+0 1 -1 -1 -1 -1 0 527 635 793
 6 0 1027 169 0 0 300 180 300 180 0 61440 1 36756 1904 0 0 0 0 260 0 0 0 1 5 32767 1 59422 1 5 1017 174 4 6 518 1 0 1 0 1 169 0 59422 1 
 END_OF_DOCK_INFO
 1
-1
+2
 0
 0
 1
@@ -13132,7 +13166,7 @@ End_Of_Object VControlAdapter 4
 WListVer 2
 <VFileName V8 QL> 1 "..\Public\Documents\Vector\CANoe\Public\Documents\Vector\CANwin\8.0.71\CANwin Demos\templates" 
  0 1 1 1 1 0
- True 147 90 0 743 280 789 280
+ True 147 90 0 743 280 1865 280
 End_Of_Serialized_Data 3
 End_Of_Object VWriteControlAdapter 3
 
@@ -13273,13 +13307,6 @@ End_Of_Object VChipConfigC462 2
 18 0
 VScanBaudrateConfiguration 2 Begin_Of_Object
 1
-2
-256
-1000
-5
-1000
-1
-0
 1
 256
 1000
@@ -13291,126 +13318,6 @@ VScanBaudrateConfiguration 2 Begin_Of_Object
 End_Of_Object VScanBaudrateConfiguration 2
 4
 2
-VPanelBox 2 Begin_Of_Object
-2
-VUniqueBox 3 Begin_Of_Object
-1
-VBoxRoot 4 Begin_Of_Object
-1
-3
-1 -1 0 1 -32094 -32000 -1 -1 775 0 960 161
-LoggerPanel
-1
-
-MDI_DOCK_INFO_END
-5
-1
-6
-0 1 -1 -1 -1 -1 0 0 185 161
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
-END_OF_DOCK_INFO
-1
--1
-1
-0 1 -1 -1 -1 -1 1982 473 2442 955
-1
-1
-0 0
-END_OF_DESKTOP_DATA
-6
-0 0 0 0 0 0 0 0 0 0
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
-END_OF_DOCK_INFO
-0
--1
-1
-0 0 0 0 0 0 960 0 960 0
-0
-0
-0 0
-END_OF_DESKTOP_DATA
-6
-0 0 0 0 0 0 0 0 0 0
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
-END_OF_DOCK_INFO
-0
--1
-1
-0 0 0 0 0 0 960 0 960 0
-0
-0
-0 0
-END_OF_DESKTOP_DATA
-END_OF_DESKTOP_DATA_COLLECTION
-0
-0 1
-1
-6
-0 0 0 0 0 0 0 0 0 0
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
-END_OF_DOCK_INFO
-0
--1
-1
-0 0 0 0 0 0 960 0 960 0
-0
-0
-0 0
-END_OF_DESKTOP_DATA
-6
-0 0 0 0 0 0 0 0 0 0
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
-END_OF_DOCK_INFO
-0
--1
-1
-0 0 0 0 0 0 960 0 960 0
-0
-0
-0 0
-END_OF_DESKTOP_DATA
-6
-0 0 0 0 0 0 0 0 0 0
-6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
-END_OF_DOCK_INFO
-0
--1
-1
-0 0 0 0 0 0 960 0 960 0
-0
-0
-0 0
-END_OF_DESKTOP_DATA
-END_OF_DESKTOP_DATA_COLLECTION
-0
-END_OF_DESKTOP_MEMBER
-{17AAB618-F046-4698-A5BA-79AA380DE272}
-0
-End_Of_Object VBoxRoot 4
-1 -1 0 0 0 0 0 0 0 0 0 0
-End_Of_Object VUniqueBox 3
-2
-VPanelAdapter 3 Begin_Of_Object
-2
-<VFileName V8 QL> 1 "LoggerFiles\LoggerPanel.xvp" 
-1
-0
-0
-VPanelInfo 4 Begin_Of_Object
-1
-VPanelActiveX 5 Begin_Of_Object
-1
-4294967295
-0
-<VFileName V8 QL> 1 "" 
-0
-End_Of_Object VPanelActiveX 5
-End_Of_Object VPanelInfo 4
-1
-End_Of_Object VPanelAdapter 3
-
-End_Of_Serialized_Data 2
-End_Of_Object VPanelBox 2
 VPanelBox 2 Begin_Of_Object
 2
 VUniqueBox 3 Begin_Of_Object
@@ -13516,6 +13423,126 @@ VPanelAdapter 3 Begin_Of_Object
 1
 0
 1179603807
+VPanelInfo 4 Begin_Of_Object
+1
+VPanelActiveX 5 Begin_Of_Object
+1
+4294967295
+0
+<VFileName V8 QL> 1 "" 
+0
+End_Of_Object VPanelActiveX 5
+End_Of_Object VPanelInfo 4
+1
+End_Of_Object VPanelAdapter 3
+
+End_Of_Serialized_Data 2
+End_Of_Object VPanelBox 2
+VPanelBox 2 Begin_Of_Object
+2
+VUniqueBox 3 Begin_Of_Object
+1
+VBoxRoot 4 Begin_Of_Object
+1
+3
+1 -1 0 1 -32094 -32000 -1 -1 775 0 960 161
+LoggerPanel
+1
+
+MDI_DOCK_INFO_END
+5
+1
+6
+0 1 -1 -1 -1 -1 0 0 185 161
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+1
+-1
+1
+0 1 -1 -1 -1 -1 1982 473 2442 955
+1
+1
+0 0
+END_OF_DESKTOP_DATA
+6
+0 0 0 0 0 0 0 0 0 0
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 0 0 0 0 0 960 0 960 0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 0 0 0 0 0 0 0 0 0
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 0 0 0 0 0 960 0 960 0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+END_OF_DESKTOP_DATA_COLLECTION
+0
+0 1
+1
+6
+0 0 0 0 0 0 0 0 0 0
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 0 0 0 0 0 960 0 960 0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 0 0 0 0 0 0 0 0 0
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 0 0 0 0 0 960 0 960 0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 0 0 0 0 0 0 0 0 0
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 0 0 0 0 0 960 0 960 0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+END_OF_DESKTOP_DATA_COLLECTION
+0
+END_OF_DESKTOP_MEMBER
+{17AAB618-F046-4698-A5BA-79AA380DE272}
+0
+End_Of_Object VBoxRoot 4
+1 -1 0 0 0 0 0 0 0 0 0 0
+End_Of_Object VUniqueBox 3
+2
+VPanelAdapter 3 Begin_Of_Object
+2
+<VFileName V8 QL> 1 "LoggerFiles\LoggerPanel.xvp" 
+1
+0
+0
 VPanelInfo 4 Begin_Of_Object
 1
 VPanelActiveX 5 Begin_Of_Object
@@ -14136,7 +14163,7 @@ _size
 5
 Int32
 _version
-370
+375
 --TextFormatter: End of Object--
 End_Of_Object VNETStandaloneComponent 2
 LinScopeWindow 0
@@ -14538,7 +14565,7 @@ _size
 1
 Int32
 _version
-357
+361
 --TextFormatter: End of Object--
 TypeRef:8
 9
@@ -14791,7 +14818,7 @@ VLogCfgData 3 Begin_Of_Object
 0
 3
 0
-655
+689
 1
 1
 0
@@ -16313,7 +16340,7 @@ OverallModel
 <LogFileMergeMode>ByMeasurementTime</LogFileMergeMode>
 <RootGroup xmlns="" i:type="RootGroup">
 <OfflineSources xmlns:d4p1="http://schemas.microsoft.com/2003/10/Serialization/Arrays" />
-<Id>82930e9e-0005-4c8c-aa25-d28701268a14</Id>
+<Id>46731252-3d3c-4736-9e63-c8426af5cd1d</Id>
 </RootGroup>
 <ChannelMappingSets xmlns:d3p1="http://schemas.microsoft.com/2003/10/Serialization/Arrays" />
 <DefaultChannelMappingSetId i:nil="true" />
